8274751: Drag And Drop hangs on Windows

Backport-of: 7a0a6c95a53c6cb3340328d6543a97807320b740